trace.yml
# apiVersion: apps/v1       
# kind: Deployment
# metadata:
#   name: etcd
#   namespace: default      
#   labels:
#     app: etcd
# spec:
#   selector:
#     matchLabels:
#       app: etcd
#   replicas: 1
#   revisionHistoryLimit: 10
#   minReadySeconds: 5      
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 1
#   template:
#     metadata:
#       labels:
#         app: etcd
#     spec:
#       containers:
#         - image: bitnami/etcd:latest
#           imagePullPolicy: IfNotPresent
#           name: etcd
#           ports:
#             - containerPort: 2379
#               protocol: TCP
#             - containerPort: 2380
#               protocol: TCP
#           resources:
#             limits:
#               cpu: 150m
#               memory: 150Mi
#             requests:
#               cpu: 100m
#               memory: 100Mi
#           env:
#             - name: ALLOW_NONE_AUTHENTICATION
#               value: "yes"
#             - name: ETCD_ADVERTISE_CLIENT_URLS
#               value: "http://0.0.0.0:2379"
#             - name: ETCD_ROOT_PASSWORD
#               value: "123456"

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: etcd-svc
#   namespace: default
#   labels:
#     app: etcd
# spec:
#   type: NodePort
#   ports:
#     - name: svc
#       port: 2379
#       protocol: TCP
#       targetPort: 2379
#       nodePort: 32379
#     - name: api
#       port: 2380
#       protocol: TCP
#       targetPort: 2380
#       nodePort: 32380
#   selector:
#     app: etcd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace
  namespace: default
  labels:
    app: trace
spec:
  selector:
    matchLabels:
      app: trace
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: trace
    spec:
      containers:
        - image: scg130/jaeger:latest
          imagePullPolicy: IfNotPresent
          name: trace
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 14268
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
            - containerPort: 14250
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trace-svc
  namespace: default
  labels:
    app: trace
spec:
  type: NodePort
  ports:
    - name: svc1
      port: 5775
      protocol: UDP
      targetPort: 5775
      nodePort: 5775
    - name: svc2
      port: 6831
      protocol: UDP
      targetPort: 6831
      nodePort: 6831
    - name: svc3
      port: 6832
      protocol: UDP
      targetPort: 6832
      nodePort: 6832
    - name: svc4
      port: 5778
      protocol: TCP
      targetPort: 5778
      nodePort: 5778
    - name: svc5
      port: 16686
      protocol: TCP
      targetPort: 16686
      nodePort: 16686
    - name: svc6
      port: 14268
      protocol: TCP
      targetPort: 14268
      nodePort: 14268
    - name: svc7
      port: 9411
      protocol: TCP
      targetPort: 9411
    - name: svc8
      port: 14250
      protocol: TCP
      targetPort: 14250
      nodePort: 14250
  selector:
    app: trace
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: hystrix
#   namespace: default
#   labels:
#     app: hystrix
# spec:
#   selector:
#     matchLabels:
#       app: hystrix
#   replicas: 1
#   revisionHistoryLimit: 10
#   minReadySeconds: 5
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 1
#   template:
#     metadata:
#       labels:
#         app: hystrix
#     spec:
#       containers:
#         - image: scg130/hystrix:latest
#           imagePullPolicy: IfNotPresent
#           name: hystrix
#           ports:
#             - containerPort: 9002
#               protocol: TCP
#           resources:
#             limits:
#               cpu: 300m
#               memory: 300Mi
#             requests:
#               cpu: 150m
#               memory: 150Mi

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hystrix-svc
#   namespace: default
#   labels:
#     app: hystrix
# spec:
#   type: NodePort
#   ports:
#     - name: svc
#       port: 9002
#       protocol: TCP
#       targetPort: 9002
#       nodePort: 7777
#   selector:
#     app: hystrix
