ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: runapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.556wan.cn
      http:
        paths:
          - path: /manage/
            backend:
              serviceName: admin-app-svc
              servicePort: 80
          - path: /assets/
            backend:
              serviceName: admin-app-svc
              servicePort: 80
          - path: /
            backend:
              serviceName: micro-runapp-svc
              servicePort: 8080
